test/files/neg/t8265.scala
// scalac: -deprecation -language:higherKinds
//
class Foo[+CC[X]] { type Coll = CC[_] }
