test/files/neg/t8265.check
t8265.scala:3: error: covariant type CC occurs in invariant position in type CC[_] of type Coll
class Foo[+CC[X]] { type Coll = CC[_] }
                         ^
1 error
